# EduMUSE

./: .gitignore  LICENSE  README.md  file_upload.py  orchestrator.py  plan.txt  requirements.txt  sample_main.py  state_utils.py  tutorial.jsx
Crew_Agents/: knowledge_retrieval_evaluation_FIXED_20250601_201358.json  (+1 more)
Project/my_orchestrator/orchestrator_flow/: README.md  pyproject.toml
edumuse/: ACADEMIC_REPORT.md  README.md  assessment_output_20250611_004420.md  assessment_output_20250611_083157.md  educational_content_20250609_154115.json  educational_content_20250611_004420.json  educational_content_20250611_101547.json  evaluate_retrieval_quality.py  integration_flow.py  knowledge_retrieval_evaluation_FIXED_20250601_203255.json  knowledge_retrieval_evaluation_WORKING_20250601_203700.json  new_flows_evaluation_20250609_192947.json  pyproject.toml  report.md  search_agent_plan.txt  summary_output_20250609_163336.md  summary_output_20250611_004420.md  summary_output_20250611_100904.md  test_assessment_basic.py  test_flow_execution_fix.py  test_flows_registration.py  test_installation.py  test_knowledge_retrieval.py  test_new_flows_quality.py  test_summary_basic.py
edumuse/Soren's outputs/: knowledge_retrieval_evaluation_20250601_195726.json  quiz_output_20250609_154115.md
edumuse/src/edumuse/: __init__.py  crew.py  main.py
edumuse/src/edumuse/config/: agents.yaml  assessment_agents.yaml  assessment_tasks.yaml  summary_agents.yaml  summary_tasks.yaml  tasks.yaml
edumuse/src/edumuse/flows/: __init__.py  assessment_flow.py  hybrid_retrieval_flow.py  llm_knowledge_flow.py  podcast_flow.py  summary_flow.py
edumuse/src/edumuse/tools/: pdf_generator.py
search_rec/: README.md  pyproject.toml
search_rec/src/search_rec/: crew.py  main.py
(+51 files in other folders)
