[project]
name = "edumuse"
version = "0.1.0"
description = "edumuse using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
edumuse = "edumuse.main:run"
run_crew = "edumuse.main:run"
train = "edumuse.main:train"
replay = "edumuse.main:replay"
test = "edumuse.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
