[project]
name = "search_rec"
version = "0.1.0"
description = "search_rec using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
search_rec = "search_rec.main:run"
run_crew = "search_rec.main:run"
train = "search_rec.main:train"
replay = "search_rec.main:replay"
test = "search_rec.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
