[project]
name = "orchestrator_flow"
version = "0.1.0"
description = "orchestrator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
]

[project.scripts]
kickoff  = "orchestrator.main:kickoff"
run_crew = "orchestrator.main:kickoff"

[tool.crewai]
type         = "flow"
flow_module  = "orchestrator.main"
flow_class   = "OrchestratorFlow"

[build-system]
requires    = ["hatchling"]
build-backend = "hatchling.build"
